[package]
name = "openid-rs"
version = "0.1.0"
authors = ["René Richter <richterrettich@gmail.com>"]

[lib]
name = "openid"
path = "src/lib.rs"

[[bin]]
name = "openid-rs"
path = "src/main.rs"

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
openssl = "0.9.16"
rustwt = "1.0.0"
rusqlite = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json="1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }
time = "0.1"
url = "1.5.1"
clap = "2.26.0"
base64 = "~0.6.0"
